--- a/travel_recommendation.css
+++ b/travel_recommendation.css
@@ -5,18 +5,35 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+
 nav {
-    background-color: #f0f0f0;
-    padding: 20px;
+    display: inline-block;
+    height: 100%;
+    width: auto;
+    padding: 0 6px;
+    text-decoration: none;
+    font-size: 14px;
+    font-weight: 400;
+    list-style: none;
+    color: rgba(0, 0, 0, .8);
+}
+/*nav {
+    background-color: black;
+    padding: 10px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     
-  }
+  } */
   
   nav ul {
     list-style-type: none;
     /* padding: 0; */
+  }
+
+  nav div {
+    position: center;
   }
   
   nav ul li {
@@ -28,4 +45,77 @@ nav {
     text-decoration: none;
     color: #333;
     font-weight: bold;
+  }
+
+  nav input {
+    text-align: left;
+    padding-left: 30px;
+    padding-right:30px;
+
+  }
+
+  input img {
+    size: 5%;
+    position: right;
+  }
+
+  .searching {
+    width: 100%;
+    max-width= 400px;
+    background: rgba (255, 255, 255, 0.2);
+    align-items: right;
+    border-radius: 60px;
+    padding: 10px 20px;
+    color: green
+  }
+
+  .searching input {
+    flex: 1;
+    border: 0;
+    outline: none;
+    padding: 24px 20px;
+    font-size: 15px;
+    color: green;
+    background-color: whitesmoke;
+  }
+
+  ::placeholder{
+    color: green;
+
+  }
+
+  .searching img {
+    width: 15px;
+    height: 15px;
+  }
+
+  .searching button {
+    border: 2px;;
+    border-radius: 20%;
+    width: 50px;
+    height: 50px;
+    background-color: turquoise;
+    color: white;
+  }
+
+  /* body CSS */
+
+  body {
+    background-image: url("./backgroundImg.jpg");
+  }
+
+  h1 {
+    padding-right: 100px;
+    padding-left: 30px;
+    font-size: 70px;
+    color: whitesmoke;
+    text-align: left;
+  }
+
+  body p{
+    padding-right: 130px;
+    padding-left: 30px;
+    font-size: 25px;
+    color: whitesmoke;
+    text-align: left;
   }
