--- a/travel_recommendation.css
+++ b/travel_recommendation.css
@@ -2,10 +2,10 @@
 */
 
 nav{
-    position: absolute:
-    width: 100%
+    position: absolute;
+    width: 100%;
     height: 60px;
     background-color: black;
     font-size: 20px;
-    text-color: whitesmoke;
+    color: whitesmoke;
 }
