--- a/travel_recommendation.css
+++ b/travel_recommendation.css
@@ -1,11 +1,103 @@
 /*nav
 */
 
+*{
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  box-sizing:border-box;
+  background-size: auto;
+}
+
 nav{
     position: absolute;
+    align-items: center;
+    display: flex;
     width: 100%;
     height: 60px;
     background-color: black;
-    font-size: 20px;
+    padding:20px;
     color: whitesmoke;
+    justify-content: space-between;
+}
+
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+nav ul li p{
+    display: inline;
+}
+
+nav ul li{
+    display: inline;
+    margin-right: 10px;
+}
+
+nav ul div {
+    position: relative;
+    width: 40%;
+    height: 100%;
+    background-color: black;
+    display: inline;
+    padding-left: 190px;
+    padding-right: 100px;
+    text-align: center;
+}
+
+nav ul div li a{
+    position: relative;
+    color: whitesmoke;
+    text-decoration: none;
+    padding-left:10px;
+
+}
+
+.searchSec {
+    position: relative;
+    display: inline;
+    width: 40%;
+    float: left;
+    padding-left: 130px;
+}
+
+nav input {
+    position: relative;
+    width: 50%;
+}
+
+#searchIcon {
+    width: 10px;
+    height: 10px;
+    color: blue;
+}
+
+body {
+    margin: 0;
+    background-image: url("./backgroundImg.jpg");
+
+}
+
+h1 {
+    position: relative;
+    padding-top: 10%;
+    color: whitesmoke;
+    width:min-content;
+    display: block;
+    margin-left: 110px;
+    font-weight: bold;
+    font-size: 70px;
+}
+
+body p{
+    position: relative;
+    color: whitesmoke;
+    width:25%;
+    display: block;
+    margin-left:110px;
+}
+
+#bookNowBtn {
+    margin-left: 110px;
 }
