--- a/travel_recommendation.css
+++ b/travel_recommendation.css
@@ -4,13 +4,12 @@
 *{
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   box-sizing:border-box;
-  background-size: auto;
 }
 
 nav{
-    position: absolute;
+    position:sticky;
     align-items: center;
-    display: flex;
+    display:flex;
     width: 100%;
     height: 60px;
     background-color: black;
@@ -80,6 +79,7 @@ body {
     margin: 0;
     background-image: url("./backgroundImg.jpg");
     background-repeat: no-repeat;
+    background-blend-mode:saturation;
 
 
 }
@@ -87,7 +87,6 @@ body {
 h1 {
     position: relative;
     color: whitesmoke;
-    padding-top: 10%;
     width:min-content;
     display: block;
     margin-left: 100px;
@@ -100,7 +99,9 @@ body p{
     color: whitesmoke;
     width:40%;
     display: block;
-    margin-left:110px;
+    font-weight:300;
+    margin-left:100px;
+    margin-bottom: 30px;
 }
 
 #bookNowBtn {
