--- a/travel_recommendation.css
+++ b/travel_recommendation.css
@@ -41,8 +41,8 @@ nav ul div {
     height: 100%;
     background-color: black;
     display: inline;
-    padding-left: 140px;
-    padding-right: 50px;
+    padding-left: 70px;
+    padding-right: 0px;
     text-align: center;
 }
 
@@ -57,21 +57,71 @@ nav ul div li a{
 .searchSec {
     position: relative;
     display: inline;
-    width: 40%;
+    width: 50%;
+    right:1%;
     float: left;
+    background-color:white;
+    box-sizing: border-box;
+    border-radius: 25px;
+    border: 4px solid white;
     padding-left: 130px;
 }
 
-nav input {
+#searchBar {
+    /* box-sizing: border-box;
+    border-radius: 30px;
     position: relative;
-    width: 50%;
+    width: 70%;
+    border-color: white; */
+    position: relative;
+    right: 25%;
+    /* top: 0; */
+    /* left: 0; */
+    /* margin-left:0; */
+    text-align: left;
+    width: 60%;
+    height: 30px;
+    line-height: 50px;
+    outline: 0;
+    border: 0;
+    font-size: 1em;
+    border-radius: 20px;
+    padding: 0 0px;
+    color: darkgreen;
 }
 
-#searchIcon {
-    width: 10px;
-    height: 10px;
-    color: blue;
+::-webkit-input-placeholder{
+    color: darkgreen;
 }
+
+form button {
+    color: whitesmoke;
+    background-color: darkgreen;
+}
+
+
+/* 
+nav input {
+    position: relative;
+    width: 70%;
+    color: green;
+    float:none;
+} */
+
+img {
+    box-sizing: border-box;
+    padding: 3px;
+    width: 23px;
+    height: 23px;
+    position: relative;
+    top: 3px;
+    right: 3px;
+    top:5px;
+    border-radius: 50px;
+    color: whitesmoke;
+    background-color: green;
+    text-align: center;
+   }
 
 /*body & other elements */
 
@@ -80,8 +130,8 @@ body {
     background-image: url("./backgroundImg.jpg");
     background-repeat: no-repeat;
     background-blend-mode:saturation;
-
-
+    height: 100vh;
+    width: 100%;
 }
 
 h1 {
@@ -106,4 +156,6 @@ body p{
 
 #bookNowBtn {
     margin-left: 100px;
+    color: whitesmoke;
+    background-color: darkgreen;
 }
