--- a/travel_recommendation.css
+++ b/travel_recommendation.css
@@ -123,12 +123,45 @@ img {
     text-align: center;
    }
 
+   .result {
+    position: relative;
+    margin-left: 100px;
+    color: whitesmoke;
+    width: 400px;
+    display: block;
+    font-weight: 150;
+   }
+
+   h2 {
+    position: relative;
+    color: whitesmoke;
+    display: block;
+    margin-left: 100px;
+    font-weight: bold;
+    font-size: 30px;
+
+   }
+
+   div img {
+    box-sizing: border-box;
+    width: 300px;
+    height: 300px;
+    margin-left: 100px;
+    position: relative;
+    border-radius: 25px;
+    color: whitesmoke;
+    background-color: green;
+    text-align: center;
+   }
+
 /*body & other elements */
 
 body {
     margin: 0;
     background-image: url("./backgroundImg.jpg");
     background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     background-blend-mode:saturation;
     height: 100vh;
     width: 100%;
@@ -158,4 +191,12 @@ body p{
     margin-left: 100px;
     color: whitesmoke;
     background-color: darkgreen;
+    border-readius: 25px;
+}
+
+#visit {
+    margin-left: 100px;
+    color: whitesmoke;
+    background-color: darkgreen;
+    border-radius: 25px;
 }
