--- a/contact_us.css
+++ b/contact_us.css
@@ -53,10 +53,12 @@
       padding-left:10px;
   }
 
-  body {
+body {
     margin: 0;
     background-image: url("./backgroundImg.jpg");
     background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     background-blend-mode:saturation;
     height: 100vh;
     width: 100%;
@@ -79,18 +81,23 @@ body p{
     color: whitesmoke;
     width:40%;
     display: block;
-    font-weight:300;
     margin-left:100px;
     margin-bottom: 30px;
+}
+
+.getIn {
+    font-size: 35px;
+    font-weight:400px;
 }
 
 form {
     position:relative;
     display: block;
-    width: 60%;
+    width: 80%;
     margin-left: 700px;
     color: whitesmoke;
     margin-bottom: 10px;
+    text
 }
 
 form input {
@@ -108,6 +115,7 @@ form textarea {
     display: list-item;
     width: 400px;
     background-color: rgb(0, 100,0, 0.4);
+    color: whitesmoke;
     border-radius: 10px;
 
 }
@@ -125,4 +133,10 @@ button {
     color: whitesmoke;
     background-color: darkgreen;
     margin-bottom: 70px;
+}
+
+#formAndButton {
+    position: absolute;
+    top: 33%;
+    left: 17%;
 }
